[package]
name = "Thirtyfour-chromedriver"
version = "0.1.6"
edition = "2024"
description = "Simple Rust library for installing chromedriver automatically"
license = "MIT"
repository = "https://github.com/PARKasd/Thirtyfour-chromedriver"
readme = "README.md"
authors = ["parkm04"]
keywords = ["chromedriver", "thirtyfour"]

[dependencies]
platform-dirs = "0.3.0"
reqwest = "0.12.15"
anyhow = "1.0.97"
indicatif = "0.17.11"
zip = "2.1.1"
zip-extensions = "0.7.0"
regex = "1.11.1"
thirtyfour = "0.35.0"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }


[lib]
name = "thirtyfour_chromedriver"
path = "src/lib.rs"