[package]
name = "Thirtyfour-chromedriver"
version = "0.3.1"
edition = "2024"
description = "Simple Rust library for installing chromedriver automatically"
license = "MIT"
repository = "https://github.com/PARKasd/Thirtyfour-chromedriver"
readme = "README.md"
authors = ["parkm04"]
keywords = ["chromedriver", "thirtyfour"]

[dependencies]
platform-dirs = "0.3.0"
reqwest = { version = "0.13", features = ["json"] }
anyhow = "1"
indicatif = "0.17"
zip = "8"
regex = "1"
serde_json = "1"
thirtyfour = "0.35"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }


[lib]
name = "thirtyfour_chromedriver"
path = "src/lib.rs"
